# python-project-50

./: .coverage  .coveragerc  .flake8  Makefile  README.md  coverage.xml  main.py  pyproject.toml  ruff.toml  sonar-project.properties  tox.ini
.github/workflows/: pyci.yml
gendiff/: diff_logic.py  file_parser.py  generate_diff.py  run_diff.py
gendiff/formatters/: __init__.py  json_f.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff_logic.py  test_gendiff.py  test_generate_diff.py  test_run_diff.py
tests/expected/: diff_json_json_json.json  diff_json_json_plain.txt  diff_json_json_stylish.txt  nested_json.json  no_diff_json_yaml_json.json  no_diff_json_yaml_stylish.txt  no_diff_yaml_json.json  no_diff_yaml_stylish.txt
tests/test_data/: 2.0.json  2.1.json  3.1.json  4.1.json
tests/test_data_json/: 1.0.json  1.1.json  3.0.json  4.0.json  4.2.json  full_with_diff_values.json  nested_diff.py
tests/test_data_yaml/: 1.1.yaml  2.1.yaml  3.0.yaml  3.1.yaml  4.0.yaml  4.1.yaml  4.2.yaml  invalid.yaml
