[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.black]
exclude = '''
/(
    \.venv
  | venv
  | \.git
)/
'''

[tool.isort]
skip = [".venv", "venv"]
profile = "black"

[tool.mypy]
exclude = ['\.venv', 'venv']

[pytest]
norecursedirs = [".venv", "venv"]
minversion = "6.0"
testpaths = "tests"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]
