[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0,<0.9.8",
    "pytest-cov>=7.0.0"
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.black]
exclude = '''
/(
    \.venv
  | venv
  | \.git
)/
'''

[tool.isort]
skip = [".venv", "venv"]
profile = "black"

[tool.mypy]
exclude = ['\.venv', 'venv']

[pytest]
norecursedirs = [".venv", "venv"]
minversion = "9.0.2"
testpaths = "tests"


